--- a/playable/playable.html
+++ b/playable/playable.html
@@ -15,8 +15,8 @@
 
 	
 	//Links for the Unity Port
-	this.urlIOS = "IOS link";
-	this.urlAndroid = "android link";
+	this.urlIOS = "https://apps.apple.com/app/welcome-baby-3d/id1540312859";
+	this.urlAndroid = "https://play.google.com/store/apps/details?id=com.miathecat.welcomebaby";
 
 	// Paste generated JSONs here
 	this.landscapeJSON={"__world":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"endCardPangle":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"iconPangle":{"position":{"x":569,"y":280},"scale":{"x":1.3,"y":1.3}},"playNowPangle":{"position":{"x":569,"y":550},"scale":{"x":1,"y":1}}},"endCard":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"icon":{"position":{"x":569,"y":280},"scale":{"x":1.3,"y":1.3}},"playNow":{"position":{"x":569,"y":550},"scale":{"x":1,"y":1}}},"command0":{"position":{"x":569,"y":519},"scale":{"x":1,"y":1}},"Hand":{"position":{"x":746,"y":223},"scale":{"x":0.5551719236580221,"y":0.5551719236580221}},"InGameUI":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"check3":{"position":{"x":617,"y":34},"scale":{"x":1,"y":1}},"check2":{"position":{"x":567,"y":34},"scale":{"x":1,"y":1}},"check1":{"position":{"x":518,"y":34},"scale":{"x":1,"y":1}},"circle3":{"position":{"x":617,"y":34},"scale":{"x":1,"y":1}},"circle2":{"position":{"x":567,"y":34},"scale":{"x":1,"y":1}},"circle1":{"position":{"x":517,"y":34},"scale":{"x":1,"y":1}},"Triangle":{"position":{"x":567,"y":424},"scale":{"x":1,"y":1}},"ColorBar":{"position":{"x":567,"y":125},"scale":{"x":0.6,"y":0.6}}},"Angry":{"position":{"x":666,"y":272},"scale":{"x":0.6,"y":0.6}},"GameGroup":{"position":{"x":569,"y":320},"scale":{"x":1,"y":1},"lady":{"position":{"x":9,"y":33},"scale":{"x":1.3461784916246438,"y":1.3461784916246438}},"sweatArea":{"position":{"x":-28,"y":-112},"scale":{"x":0.2989875856406496,"y":0.43789803378774717}},"baby":{"position":{"x":7,"y":194},"scale":{"x":0.6420963390940834,"y":0.6420963390940834}},"background":{"position":{"x":13,"y":104},"scale":{"x":1.1,"y":1.1}}},"camera":{"position":{"x":569,"y":320},"scale":{"x":1,"y":1}}}}
