--- a/playable/playable.html
+++ b/playable/playable.html
@@ -3,7 +3,7 @@
 <html><head><meta charset="UTF-8"><title>Game2</title><script>function GlobalObj(){
 	this.firstState="Level";
 	
-	this.isUnity  = false;
+	this.isUnity  = true;
 	this.isPangle = false;
 	this.isSip    = false;
 
