--- a/playable/playable.html
+++ b/playable/playable.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<!-- Original file name is: MVI_sdmip_extravaganza_00_en_play_UN.html --->
+<!-- Original file name is: bsp_sdmip_extravaganza_00_en_play_UN.html --->
 <html><head><meta charset="UTF-8"><title>Game2</title><script>function GlobalObj(){
 	this.firstState="Level";
 	
-	this.isUnity  = true;
+	this.isUnity  = false;
 	this.isPangle = false;
 	this.isSip    = false;
 
@@ -19,8 +19,8 @@
 	this.urlAndroid = "https://play.google.com/store/apps/details?id=merge.villa";
 
 	// Paste generated JSONs here
-this.landscapeJSON={"__world":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"endCardPangle":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"iconPangle":{"position":{"x":569,"y":223},"scale":{"x":1.3,"y":1.3}},"playNowPangle":{"position":{"x":569,"y":493},"scale":{"x":1,"y":1}}},"endCard":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"icon":{"position":{"x":569,"y":223},"scale":{"x":1.3,"y":1.3}},"playNow":{"position":{"x":569,"y":493},"scale":{"x":1,"y":1}}},"command0":{"position":{"x":569,"y":60},"scale":{"x":1,"y":1}},"board":{"position":{"x":787,"y":332},"scale":{"x":1,"y":1},"group":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1}}},"Game":{"position":{"x":-99,"y":294},"scale":{"x":1.8,"y":1.8},"group":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1}}},"camera":{"position":{"x":569,"y":320},"scale":{"x":1,"y":1}}}}
-this.portraitJSON={"__world":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"endCardPangle":{"position":{"x":-249,"y":249},"scale":{"x":1,"y":1},"iconPangle":{"position":{"x":569,"y":320},"scale":{"x":1.3,"y":1.3}},"playNowPangle":{"position":{"x":569,"y":650},"scale":{"x":1,"y":1}}},"endCard":{"position":{"x":-249,"y":249},"scale":{"x":1,"y":1},"icon":{"position":{"x":569,"y":155},"scale":{"x":1.3,"y":1.3}},"playNow":{"position":{"x":569,"y":514},"scale":{"x":1,"y":1}}},"command0":{"position":{"x":320,"y":471},"scale":{"x":1,"y":1}},"board":{"position":{"x":320,"y":834},"scale":{"x":1,"y":1},"group":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1}}},"Game":{"position":{"x":-223,"y":247},"scale":{"x":2.6,"y":2.6},"group":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1}}},"camera":{"position":{"x":320,"y":569},"scale":{"x":1,"y":1}}}}
+	this.landscapeJSON={"__world":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"endCardPangle":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"iconPangle":{"position":{"x":569,"y":223},"scale":{"x":1.3,"y":1.3}},"playNowPangle":{"position":{"x":569,"y":493},"scale":{"x":1,"y":1}}},"endCard":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"icon":{"position":{"x":569,"y":223},"scale":{"x":1.3,"y":1.3}},"playNow":{"position":{"x":569,"y":493},"scale":{"x":1,"y":1}}},"command0":{"position":{"x":569,"y":60},"scale":{"x":1,"y":1}},"board":{"position":{"x":787,"y":332},"scale":{"x":1,"y":1},"group":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1}}},"Game":{"position":{"x":-99,"y":294},"scale":{"x":1.8,"y":1.8},"group":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1}}},"camera":{"position":{"x":569,"y":320},"scale":{"x":1,"y":1}}}}
+	this.portraitJSON={"__world":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1},"endCardPangle":{"position":{"x":-249,"y":249},"scale":{"x":1,"y":1},"iconPangle":{"position":{"x":569,"y":320},"scale":{"x":1.3,"y":1.3}},"playNowPangle":{"position":{"x":569,"y":650},"scale":{"x":1,"y":1}}},"endCard":{"position":{"x":-249,"y":249},"scale":{"x":1,"y":1},"icon":{"position":{"x":569,"y":155},"scale":{"x":1.3,"y":1.3}},"playNow":{"position":{"x":569,"y":514},"scale":{"x":1,"y":1}}},"command0":{"position":{"x":320,"y":471},"scale":{"x":1,"y":1}},"board":{"position":{"x":320,"y":834},"scale":{"x":1,"y":1},"group":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1}}},"Game":{"position":{"x":-223,"y":247},"scale":{"x":2.6,"y":2.6},"group":{"position":{"x":0,"y":0},"scale":{"x":1,"y":1}}},"camera":{"position":{"x":320,"y":569},"scale":{"x":1,"y":1}}}}
 	this.isSeparateOrientationState = !this.isUnity;
 	this.orientation="l";
 	this.LangCode='EN';
